# bootstrap

./: .gitignore  CMakeLists.txt  conanfile.txt  formatter.cpp  formatter.h  gcc_profile_debug  issue.md  main.cpp  result.h  result_message.h  terp.cpp  terp.h
doc/: instrcution
examples/: Vector2.gfx  constant_expression.gfx  example.gfx  pointer.gfx  preload-ast.dot  preload.gfx  short-ast.dot  short.gfx  simple-ast.dot  simple.gfx  vector2.gfx
src/: alpha_compiler.cpp  alpha_compiler.h  alpha_parser.cpp  alpha_parser.h  ast.cpp  ast.h  compiler.cpp  compiler.h  disassemble.cpp  disassemble.h  evaluator.cpp  evaluator.h  formatter.cpp  formatter.h  instruction.h  instruction_cache.cpp  instruction_emitter.cpp  instruction_emitter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  parser_types.h  result.h  result_message.h  symbol_table.cpp  symbol_table.h  terp.cpp  terp.h  token.cpp  token.h
src/bst/: main.cpp
src/common/: bytes.h  colorizer.cpp  colorizer.h  defer.h  formatter.h  graphviz_formatter.cpp  graphviz_formatter.h  id_pool.cpp  id_pool.h  result.h  result_message.h  rune.cpp  rune.h  source_file.cpp  source_file.h  source_location.cpp  source_location.h  string_extension.cpp  string_extension.h  ya_getopt.c  ya_getopt.h
src/compiler/: bytecode_emitter.cpp  bytecode_emitter.h  code_dom_formatter.cpp  code_dom_formatter.h  compiler.cpp  compiler.h  constant_expression_evaluator.cpp  constant_expression_evaluator.h  scope.cpp  scope.h  symbol_table.h  type_inference_engine.cpp  type_inference_engine.h
src/compiler/elements/: alias.cpp  alias.h  any_type.cpp  any_type.h  argument_list.cpp  argument_list.h  array_type.cpp  array_type.h  attribute.cpp  attribute.h  binary_operator.cpp  binary_operator.h  block.cpp  block.h  block_comment.cpp  block_comment.h  boolean_literal.cpp  boolean_literal.h  cast.cpp  cast.h  comment.cpp  comment.h  composite_type.cpp  composite_type.h  directive.cpp  directive.h  element.cpp  element.h  element_types.cpp  element_types.h  expression.cpp  expression.h  field.cpp  field.h  float_literal.cpp  float_literal.h  identifier.cpp  identifier.h  if_element.cpp  initializer.cpp  (+31 more)
src/core/: CMakeLists.txt  configure.in.h
src/core/compiler/: ast_evaluator.cpp  ast_evaluator.h  bytecode_emitter.cpp  bytecode_emitter.h  code_dom_formatter.cpp  code_dom_formatter.h  compiler_types.cpp  compiler_types.h  element_builder.cpp  element_builder.h  element_map.cpp  element_map.h  emit_context.cpp  emit_context.h  extern.cpp  extern.h  scope_manager.cpp  scope_manager.h  session.cpp  session.h  variable.cpp  variable.h
src/core/compiler/elements/: alias.cpp  alias.h  any_type.cpp  any_type.h  argument_list.cpp  argument_list.h  array_type.cpp  array_type.h  assembly_label.cpp  assembly_label.h  attribute.cpp  attribute.h  binary_operator.cpp  binary_operator.h  block.cpp  block.h  boolean_literal.cpp  boolean_literal.h  cast.cpp  cast.h  comment.cpp  comment.h  composite_type.cpp  composite_type.h  directive.cpp  directive.h  element  element.cpp  element.h  element_types.cpp  element_types.h  expression.cpp  expression.h  field.cpp  field.h  float_literal.cpp  float_literal.h  identifier.cpp  identifier.h  identifier_reference.cpp  (+62 more)
src/core/compiler/elements/instrinics/: alloc_intrinsic.cpp  alloc_intrinsic.h  free_intrinsic.cpp  free_intrinsic.h  intrinsic.cpp  intrinsic.h  size_of_intrinsic.cpp  size_of_intrinsic.h
src/core/compiler/elements/intrinics/: address_of_intrinsic.cpp  address_of_intrinsic.h  align_of_intrinsic.cpp  align_of_intrinsic.h  alloc_intrinsic.cpp  alloc_intrinsic.h  free_intrinsic.cpp  intrinsic  intrinsic.cpp  intrinsic.h  size_of_intrinsic.cpp  size_of_intrinsic.h  type_of_intrinsic.cpp  type_of_intrinsic.h
src/core/compiler/elements/types/: any_type.cpp  any_type.h  array_type.cpp  array_type.h  bool_type.cpp  bool_type.h  composite_type.cpp  composite_type.h  module_type.cpp  module_type.h  namespace_type.cpp  namespace_type.h  numeric_type.cpp  numeric_type.h  pointer_type.cpp  pointer_type.h  procedure_type.cpp  procedure_type.h  string_type.cpp  string_type.h  struct_type.cpp  struct_type.h  tuple_type.cpp  tuple_type.h  type  type.cpp  type.h  type_info.cpp  type_info.h  unknown_type.cpp  unknown_type.h
src/core/parser/: ast.cpp  ast.h  ast_formatter.cpp  ast_formatter.h  infix_parser.cpp  infix_parser.h  lexer.cpp  lexer.h  parser.cpp  parser.h  prefix_parser.cpp  prefix_parser.h  token.cpp  token.h
src/core/tools/: disassemble.h
src/core/vm/: assembler.cpp  assembler.h  assembly_listing.cpp  assembly_listing.h  block_entry.cpp  block_entry.h  ffi.h  heap.h  instruction.cpp  instruction.h  instruction_block.cpp  instruction_block.h  instruction_builder.h  instruction_cache.cpp  instruction_cache.h  instruction_emitter.cpp  instruction_emitter.h  label.cpp  label.h  op_code.h  register.h  register_allocator.cpp  register_allocator.h  segment.cpp  segment.h  shared_library.cpp  shared_library.h  stack_frame.cpp  stack_frame.h  symbol.cpp  symbol.h  terp.cpp  terp.h
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/parser/: ast.cpp  ast.h  ast_formatter.cpp  ast_formatter.h  infix_parser.cpp  infix_parser.h  lexer.cpp  lexer.h  parser.cpp  parser.h  prefix_parser.cpp  prefix_parser.h  scope.cpp  symbol_table.cpp  symbol_table.h  token.cpp  token.h
src/parser/ast/: ast.cpp  ast.h  ast_formatter.cpp  ast_formatter.h
src/tools/: disassemble.h
src/vm/: assembler.cpp  assembler.h  ffi.h  heap.h  instruction.cpp  instruction.h  instruction_cache.cpp  instruction_cache.h  instruction_emitter.cpp  instruction_emitter.h  op_code.h  shared_library.cpp  shared_library.h  terp.cpp  terp.h
